# warehouse-mgr

./: CMakeLists.txt  Item.cpp  LICENSE.md  Manager.cpp  README.md  StorageUnit.cpp
_NOTES/: TODO.txt
cmake/: warehouse
cmake/.cache/clangd/index/: Item.cpp.192692B082CD903F.idx  Manager.cpp.74339FCE79697160.idx  StorageRow.cpp.035263C8E4BE1245.idx  StorageUnit.cpp.FF50BE2CFF687B21.idx  Warehouse.cpp.97DDA5B6AFFD46E2.idx
src/: Manager.cpp  StorageRow.cpp  Warehouse.cpp
